<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navtop"
            android:backgroundTint="@color/azul_do_wash_azul"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgServico"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:elevation="10dp"
                android:contentDescription="@string/servi_o"
                android:scaleType="centerCrop"
                android:src="@drawable/servico1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txtServico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginStart="45dp"
                    android:text="@string/nome_do_servi_o"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/titulo_servico" />

                <TextView
                    android:id="@+id/txtPreco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:contentDescription="@string/img_servico1"
                    android:text="@string/r_50_00" />

                <Button
                    android:id="@+id/addCarrinho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:elevation="10dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/rounded_button_carrinho"
                    android:padding="10dp"
                    android:text="@string/adicionar_ao_carrinho"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>
