<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layouprincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaCentral">

    <!-- Conteúdo principal da tela aqui -->


    <ViewFlipper

        android:id="@+id/sliderflipper"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:autoStart="true"
        android:flipInterval="3500"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">


        <ImageView
            android:id="@+id/slide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide3"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide3" />

        <ImageView
            android:id="@+id/slide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide1" />

        <ImageView
            android:id="@+id/slide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide2" />


        <ImageView
            android:id="@+id/slide5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide5"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide5" />

        <ImageView
            android:id="@+id/slide4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide4"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide4" />


        <ImageView
            android:id="@+id/slide6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide6"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide6" />

        <ImageView
            android:id="@+id/slide7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide7"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide7" />

        <ImageView
            android:id="@+id/slide8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide8"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide8" />

        <ImageView
            android:id="@+id/slide9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide9"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide9" />

        <ImageView
            android:id="@+id/slide10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide10"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/slide10" />


    </ViewFlipper>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Fim do conteúdo principal   -->


    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/bgnavigation"
        app:itemIconSize="35dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav" />

    <View
        android:id="@+id/view_bg_fundo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/navtop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de pesquisa com ícone e texto -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:textColorHint="@color/black"
        app:hintTextColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/search_edit_text_bg"
            android:drawableStart="@drawable/icone_pesquisar"
            android:drawableEnd="@drawable/icone_microfone"
            android:hint="@string/pesquisarr"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@color/bgnavigation"
            app:hintEnabled="false"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@drawable/barra_de_decoracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bg_fundo" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra_de_decoracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderflipper" />

    <!-- BTN DE VOLTAR IMG DO SLIDE   -->
    <ImageButton
        android:id="@+id/btnAnterior"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_transparente"
        android:contentDescription="@string/icone_slide_voltar"
        app:layout_constraintBottom_toBottomOf="@+id/sliderflipper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sliderflipper"
        app:srcCompat="@drawable/icone_voltar_slide" />

    <!--  BTN DE PROXIMO IMG DO SLIDE  -->
    <ImageButton
        android:id="@+id/btnProximo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_transparente"
        android:contentDescription="@string/btn_proximo_slide"
        app:layout_constraintBottom_toBottomOf="@+id/sliderflipper"
        app:layout_constraintEnd_toEndOf="@+id/sliderflipper"
        app:layout_constraintTop_toTopOf="@+id/sliderflipper"
        app:srcCompat="@drawable/icone_proximo_slide" />





</androidx.constraintlayout.widget.ConstraintLayout>
