<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="197dp"
        android:layout_height="224dp"
        android:layout_marginTop="44dp"
        android:alpha="0.8"
        android:contentDescription="@string/iconeperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retangulo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="213dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/iconeperfill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perfil"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        style="@style/EditTextWithWhiteUnderline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.9"
        android:autofillHints=""
        android:background="@color/iconeRetangulo"
        android:drawableStart="@drawable/iconeperfill"
        android:drawableEnd="@drawable/iconecheck"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/arimo"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/EsqueceuSenha"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/esqueceu_a_senha"
        android:text="@string/esqueceu_a_senhaa"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/LembrarSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.8"
        android:background="#1D1D1D"
        android:contentDescription="@string/google"
        android:drawableTop="@drawable/iconegoogle"
        android:elevation="8dp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints,VisualLintButtonSize,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="#1D1D1D"
        android:text="@string/registrar"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <CheckBox
        android:id="@+id/LembrarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/white"
        android:minHeight="48dp"
        android:scrollbarThumbHorizontal="@color/black"
        android:scrollbarThumbVertical="@color/white"
        android:text="@string/LembrarSenha"
        android:textColor="@color/white"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.8"
        android:background="#1D1D1D"
        android:text="@string/l_o_g_i_n"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LembrarSenha" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        style="@style/EditTextWithWhiteUnderline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.9"
        android:autofillHints=""
        android:background="@color/iconeRetangulo"
        android:drawableStart="@drawable/cadeado"
        android:drawableEnd="@drawable/iconepeparainput"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/arimo"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />


</androidx.constraintlayout.widget.ConstraintLayout>
